--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,15 @@ a {
     background: white;
   }
 }
+.modal-size {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
+
+  transform: translate(-50%, -50%);
+}
