--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,27 +6,32 @@
   /* min-height: 100vh; */
   padding: 4rem 0;
   flex: 1;
+  background: #f6f6ff;
   /* display: flex; */
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
-  background:"white";
 }
 .main_box{
-  /* border: 1px solid #e7e7e7; */
-  border-radius: 20px;
+  border: 1px solid #e7e7e7;
+
   padding: 30px;
-  width: "100%";
-  background: 'white'
+  width: 80%;
+  background: white;
+  margin: 0 auto;
+  margin-top: 2%;
+  height: 100%;
 }
 .side_bar{
   padding-left: 20px;
-    background: #ededed;
-    /* color: white; */
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 20px;
+  background: #ededed;
+  /* color: white; */
+  border: 1px solid lightgrey;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 20px;
+  box-shadow: 2px 0px 5px #ebebeb;
 }
 .footer {
   display: flex;
