--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,11 +24,10 @@
 }
 .side_bar{
   padding-left: 20px;
-  background: #ededed;
+  background: #fff;
   /* color: white; */
   border: 1px solid lightgrey;
   padding-top: 20px;
-  padding-left: 20px;
   padding-right: 20px;
   border-radius: 20px;
   box-shadow: 2px 0px 5px #ebebeb;
