--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,18 +6,28 @@
   /* min-height: 100vh; */
   /* padding: 4rem 0; */
   flex: 1;
-  background: #f6f6ff;
+  background: #fff;
   /* display: flex; */
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
 }
-.main_box{
-  border: 1px solid #e7e7e7;
 
+.main_box{
+  /* border: 1px solid var(--app-border); */
+  padding: 30px;
+  width: 90%;
+  background: var(--app-secondary-color);
+  margin: 0 auto;
+  margin-top: 2%;
+  height: 100%;
+}
+.main_page {
+  /* min-height: 100vh; */
+  /* padding: 4rem 0; */
   padding: 30px;
   width: 80%;
-  background: white;
+  background: var(--app-secondary-color);
   margin: 0 auto;
   margin-top: 2%;
   height: 100%;
@@ -30,13 +40,13 @@
     /* align-items: center; */
     justify-content: center;
     border-radius: 15px 0px 15px 0px;
-    background: #5e35b1;
+    background: var(--app-primary-color);
 }
 .side_bar{
   padding-left: 20px;
-  background: #fff;
+  background: var(--app-secondary-color);
   /* color: white; */
-  border: 1px solid lightgrey;
+  border: 1px solid var(--app-border);
   padding-top: 20px;
   padding-right: 20px;
   border-radius: 20px;
@@ -46,7 +56,7 @@
   display: flex;
   flex: 1;
   padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid var(--app-border);
   justify-content: center;
   align-items: center;
 }
@@ -57,7 +67,12 @@
   align-items: center;
   flex-grow: 1;
 }
-
+.bg_primary{
+  background: var(--app-primary-color);
+}
+.bg_primary:hover{
+  background: var(--app-primary-color);
+}
 .title a {
   color: #0070f3;
   text-decoration: none;
@@ -87,7 +102,7 @@
 }
 
 .code {
-  background: #fafafa;
+  background: var(--app-secondary-color);
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
@@ -109,7 +124,7 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid var(--app-border);
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
