--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,12 +3,20 @@
   --app-primary-color: #0f4c39;
   --app-secondary-color: #fff;
   --app-border: #e7e7e7;
+  --app-sideBar-color: rgb(225, 253, 249);
+  --app-insideSidebar-color:#0f4c39;
+  --app-dropDown-color:rgb(225, 253, 249);
+  --app-fontFamily:'Times New Roman', Times, serif;
 }
+.globalFont{
+  font-family: 'Times New Roman', Times, serif;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Old Standard TT', serif;
+  font-family:'Times New Roman', Times, serif;
 
 }
 
@@ -20,6 +28,7 @@ a {
 * {
   box-sizing: border-box;
 }
+
 
 @media (prefers-color-scheme: dark) {
   html {
