updated admin panel

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -109,6 +109,7 @@
 }
 .bg_primary{
   background: var(--app-primary-color);
+  color:"white"
 }
 .bg_secondary{
   background: var(--app-secondary-color);
