--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -206,6 +206,22 @@
   background-position: center center;
   color: white;
 }
+.feature{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.feature .feBox{
+     
+      text-align: center;
+      padding: 25px 15px;
+      box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+      border: 1px solid #cce7d0;
+      border-radius: 4px;
+      margin: 15px 0;
+  
+}
 /* .featuredContainer:after {
   content: "";
   position: absolute;
