--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -247,7 +247,8 @@
   background-color: rgba(95, 89, 89, 0.4);
 }
 .font{
-  font-size: 40px;
+  /* padding-left: 20px; */
+  font-size: 60px;
   font-weight: 700;
   font-family: 'Times New Roman', Times, serif;
 }
