--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
 .main {
   /* min-height: 100vh; */
   /* padding: 4rem 0; */
+
   flex: 1;
   background: #fff;
   /* display: flex; */
@@ -38,7 +39,7 @@
   width: 100%;
   background: var(--app-secondary-color);
   margin: 0 auto;
-  margin-top: 2%;
+  /* margin-top: 2%; */
   height: 100%;
 }
 /* .Typography{
@@ -103,7 +104,7 @@
 }
 .bg_primary {
   background: var(--app-primary-color);
-  color:"white"
+  color: "white";
 }
 .bg_secondary {
   background: var(--app-secondary-color);
@@ -199,28 +200,49 @@
 /* featured */
 
 .featuredContainer {
-  height: calc(80vh - 100px);
-  background-image: url("../pages/assets/images/species3.jpg");
+  height: 100%;
+  /* background-image: url("../pages/assets/images/species3.jpg"); */
+
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   color: white;
+  animation: animate 16s ease-in-out infinite;
+  /* animation: titleAnimation 3s linear infinite 0s;  */
 }
-.feature{
+/* .featuredContainer{
+  background-image: url("../pages/assets/images/species2.jpg");
+  animation-delay: 1s;
+} */
+@keyframes animate {
+  0%,
+  100% {
+    background-image: url("../pages/assets/images/species3.jpg");
+  }
+  25% {
+    background-image: url("../pages/assets/images/species1.jpg");
+  }
+  50% {
+    background-image: url("../pages/assets/images/species2.jpg");
+  }
+  75% {
+    background-image: url("../pages/assets/images/species1.jpg");
+  }
+}
+
+.feature {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.feature .feBox{
-     
-      text-align: center;
-      padding: 25px 15px;
-      box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
-      border: 1px solid #cce7d0;
-      border-radius: 4px;
-      margin: 15px 0;
-  
+.feature .feBox {
+  text-align: center;
+  padding: 25px 15px;
+  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+  border: 1px solid #cce7d0;
+  border-radius: 4px;
+  margin: 15px 0;
 }
 /* .featuredContainer:after {
   content: "";
@@ -238,38 +260,80 @@
   );
 } */
 
+/* imageList */
+.overlay {
+  /* position: absolute; */
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* height: 100%;
+  width: 100%; */
+  /* opacity: 0; */
+  transition: .5s ease;
+  background-color: #c44d34;
+}
+.imageList:hover.overlay {
+  opacity:1;
+  color:#c44d34; 
+}
 .container {
   height: calc(79vh - 100px);
   justify-content: "center";
   bottom: 0;
   top: "auto";
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.60), transparent);
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
   background-color: rgba(95, 89, 89, 0.4);
 }
-.font{
+.font {
   /* padding-left: 20px; */
   font-size: 60px;
   font-weight: 700;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
-.search{
+.search {
   width: 450px;
 }
-.searchField{
-  border: 10px solid rgba(0,0,0,.4);
+.searchField {
+  border: 10px solid rgba(0, 0, 0, 0.4);
   width: 500px;
   height: 70px;
-  background-color:rgba(0,0,0,.4);
+  background-color: rgba(0, 0, 0, 0.4);
 }
-.secondContainer{
+.secondContainer {
   /* margin-top: 30px; */
   padding-top: 100px;
   height: calc(70vh - 100px);
-  background: url(../pages/assets/images/bg-pattern.png) no-repeat center #637073;
+  background: url(../pages/assets/images/bg-pattern.png) no-repeat center
+    #637073;
   background-size: cover;
   content-visibility: auto;
   color: #fff;
 }
+/* appbar */
+.navbar {
+  /* display: inline-block; */
+
+  position: relative;
+  color: #c44d34;
+}
+.navbar:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 3px;
+  bottom: 0;
+  left: 0;
+  background-color: #c44d34;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+.navbar:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
 @media screen and (max-width: 480px) {
   .container {
     height: 50vh;
