upda background color on 2nd container

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -333,7 +333,7 @@
   padding-top: 100px;
   height: calc(70vh - 100px);
   background: url(../assets/images/bg-pattern.png) no-repeat center
-    #637073;
+    #254c54;
   background-size: cover;
   content-visibility: auto;
   color: #fff;
