--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -186,7 +186,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 700px;
 }
 
 .card {
@@ -227,7 +227,7 @@
 /* featured */
 
 .featuredContainer {
-  height: 100%;
+  height: 700px;
   /* background-image: url("../pages/assets/images/species3.jpg"); */
 
   background-size: cover;
@@ -265,9 +265,9 @@
 
 
     left:"50px";
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
-    background-color: rgba(95, 89, 89, 0.4);
-  justify-content: "center";
+    background: linear-gradient(to top, rgb(45 45 45 / 60%), transparent);
+    /* background-color: rgba(95, 89, 89, 0.4); */
+    justify-content: "center";
 
 }
 .feature {
@@ -344,11 +344,13 @@
   /* margin-top: 30px; */
   padding-top: 50px;
   /* height: calc(70vh - 100px); */
-  background: url(../assets/images/bg-pattern.png) no-repeat center
-    #254c54;
+  /* background: url(../assets/images/bg-pattern.png) no-repeat center
+    #254c54; */
+  background: #141c2a !important;
   background-size: cover;
   content-visibility: auto;
   color: #fff;
+  padding-bottom: 50px;
 }
 /* appbar */
 .navbar {
