--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -415,3 +415,15 @@
     filter: invert(1);
   }
 }
+
+/* details */
+.details{
+/* margin: 5%; */
+/* padding-left: 10%; */
+/* height: 1000px; */
+padding:5% ;
+  
+}
+/* .detailsImg{
+  height: 100%;
+} */
