--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -417,13 +417,28 @@
 }
 
 /* details */
+.detailsCard{
+  background-color: whitesmoke;
+ margin: 2%;
+}
+.title1{
+  color: #c44d34;
+  font-size: 50px;
+}
+.detailsSection{
+  /* height: 800px;
+  width: 1000px; */
+  margin-left: 5%;
+  margin-right: 4%;
+}
 .details{
 /* margin: 5%; */
 /* padding-left: 10%; */
 /* height: 1000px; */
-padding:5% ;
-  
+padding-left: 25% ;
+padding-top: 7%;
+ 
 }
-/* .detailsImg{
-  height: 100%;
-} */
+.detailsImg{
+  /* width: 100px; */
+}
