--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -418,8 +418,12 @@
 
 /* details */
 .detailsCard{
-  background-color: whitesmoke;
- margin: 2%;
+  background-color: white;
+ /* margin: 5%; */
+ margin-left: 5%;
+ margin-right: 5%;
+ 
+
 }
 .title1{
   color: #c44d34;
@@ -428,8 +432,8 @@
 .detailsSection{
   /* height: 800px;
   width: 1000px; */
-  margin-left: 5%;
-  margin-right: 4%;
+
+  background-color: whitesmoke;
 }
 .details{
 /* margin: 5%; */
@@ -437,8 +441,12 @@
 /* height: 1000px; */
 padding-left: 25% ;
 padding-top: 7%;
- 
+background-color: whitesmoke;
 }
-.detailsImg{
+.detailsCarousel{
   /* width: 100px; */
+  margin-left: 5%;
+  margin-right: 4%;
+  background-color: whitesmoke;
+
 }
