--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -32,6 +32,21 @@
   margin-top: 2%;
   height: 100%;
 }
+.main_box2 {
+  /* border: 1px solid var(--app-border); */
+  padding: 30px;
+  width: 70%;
+  background: var(--app-secondary-color);
+  margin: 0 auto;
+  margin-top: 5%;
+  height: 100%;
+}
+.main_background {
+  /* border: 1px solid var(--app-border); */
+  background: var(--app-border);
+  height: inherit;
+
+}
 .main_page {
   /* min-height: 100vh; */
   /* padding: 4rem 0; */
@@ -103,7 +118,7 @@
   z-index: 1;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 40px;
   margin: 12px;
   border-radius: 4px;
 }
@@ -424,8 +439,8 @@
  margin-right: 7%;
 }
 .title1{
-  color: #c44d34;
-  font-size: 50px;
+  color: grey;
+  font-size: 30px;
 }
 .detailsSection{
   /* height: 800px;
