Updated add-new-species with multiple district

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -46,7 +46,7 @@
   /* padding: 70px; */
   /* width: 96%; */
 
-  background:#989fa8;
+  background:#fafafa;
   margin: 0 auto;
   /* padding-top: 3%; */
   padding:2.7%
