--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -139,7 +139,7 @@
   background: var(--app-dropDown-color);
 }
 .map_container{
-  height:1080px;
+  height:100%;
   width: 100%;
 }
 .map_container_2{
@@ -164,7 +164,7 @@
   font-family: monospace;
   z-index: 1;
   position: absolute;
-  height: 1080px;
+  height: 100vh;
   top: 0;
   right: 0;
   border-radius: 4px;
