--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -387,6 +387,10 @@
   background: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent);
   background-color: rgba(95, 89, 89, 0.4);
 }
+.table{
+  border-collapse: collapse;
+ 
+}
 .font {
   /* padding-left: 20px; */
   font-size: 60px;
