--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -148,7 +148,7 @@
   background: var(--app-dropDown-color);
 }
 .map_container{
-  height:100%;
+  height:100vh;
   width: 100%;
 }
 .map_container_2{
@@ -172,7 +172,7 @@
   color: #000;
   font-family: monospace;
   z-index: 1;
-  position: absolute;
+  /* position: absolute; */
   height: 100vh;
   top: 0;
   right: 0;
