--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,38 @@
 .globalFont{
   font-family: 'Times New Roman', Times, serif;
 }
+*,
+*:before,
+*:after,
+ul,
+li,
+a,
+button,
+input,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+img,
+image,
+svg,
+path,
+g,
+canvas {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	background-color: transparent;
+	border: none;
+	text-decoration: none;
+	/* font-family: 'Roboto'; */
+	user-select: none;
+	list-style: none;
+	/* position: relative; */
+}
 
 html,
 body {
