--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -204,7 +204,7 @@
   }
 .bg_primary {
   /* background: var(--app-primary-color); */
-  background-color: #c44d34;
+  background-color: "#c44d34" !important;
   color: "white" !important;
 }
 .bg_secondary {
