--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -203,8 +203,8 @@
 
   }
 .bg_primary {
-  /* background: var(--app-primary-color); */
-  background-color: "#c44d34" !important;
+  background: var(--app-primary-color) !important;
+  /* background-color: "#c44d34" ; */
   color: "white" !important;
 }
 .bg_secondary {
