--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -203,12 +203,11 @@
 
   }
 .bg_primary {
-  /* background: var(--app-primary-color); */
-  background-color: "#c44d34" !important;
-  color: "white" !important;
+  background: var(--app-primary-color) !important;
+  color: white !important;
 }
 .bg_secondary {
-  background: var(--app-secondary-color);
+  background: var(--app-secondary-color) !important;
   color: var(--app-primary-color) !important;
 }
 .bg_primary:hover {
@@ -278,8 +277,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #0070f3 !important;
+  border-color: #0070f3 !important;
 }
 
 .card h2 {
@@ -301,7 +300,7 @@
 /* featured */
 
 .featuredContainer {
-  height: 800px;
+  height: 800px !important;
   /* background-image: url("../pages/assets/images/species3.jpg"); */
 
   background-size: cover;
@@ -415,11 +414,11 @@
   font-family: "Times New Roman", Times, serif;
 }
 .search {
-  width: 450px;
+  width: 450px !important;
 }
 .searchField {
   border: 10px solid rgba(0, 0, 0, 0.4);
-  width: 500px;
+  width: 500px !important;
   height: 70px;
   background-color: rgba(0, 0, 0, 0.4);
 }
@@ -440,17 +439,17 @@
   /* display: inline-block; */
 
   position: relative;
-  color: #c44d34;
+  color: #c44d34 ;
 }
 .navbar:after {
   content: "";
   position: absolute;
-  width: 100%;
+  width: 100% !important;
   transform: scaleX(0);
   height: 3px;
   bottom: 0;
   left: 0;
-  background-color: #c44d34;
+  background-color: #c44d34 !important;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
@@ -470,7 +469,7 @@
 
 @media (max-width: 600px) {
   .grid {
-    width: 100%;
+    width: 100% !important;
     flex-direction: column;
   }
 }
@@ -481,7 +480,7 @@
     border-color: #222;
   }
   .code {
-    background: #111;
+    background: #111 !important;
   }
   .logo img {
     filter: invert(1);
@@ -490,20 +489,20 @@
 
 /* details */
 .detailsCard{
-  background-color: whitesmoke;
+background-color: whitesmoke !important;
  margin: 5%;
  margin-left: 7%;
  margin-right: 7%;
 }
 .title1{
-  color: grey;
+  color: grey !important;
   font-size: 30px;
 }
 .detailsSection{
   /* height: 800px;
   width: 1000px; */
 
-  background-color: white;
+  background-color: white !important;
 }
 .details{
 /* margin: 5%; */
