fix bug on admin-dashboard

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -458,7 +458,7 @@
   transform-origin: bottom left;
 }
 .dashboard{
-  background-color:#3a4d51;
+  background-color:#3a4d51 !important;
 }
 
 @media screen and (max-width: 480px) {
