--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -414,13 +414,22 @@
   font-family: "Times New Roman", Times, serif;
 }
 .search {
-  width: 450px !important;
+  width: 100% !important;
 }
 .searchField {
   border: 10px solid rgba(0, 0, 0, 0.4);
-  width: 500px !important;
+  width: 30% !important;
   height: 70px !important;
   background-color: rgba(0, 0, 0, 0.4);
+}
+@media (max-width: 912px) {
+  .searchField {
+    border: 10px solid rgba(0, 0, 0, 0.4);
+    width: 70% !important;
+    height: 70px !important;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
 }
 .secondContainer {
   /* margin-top: 30px; */
