--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -409,9 +409,9 @@
 }
 .font {
   /* padding-left: 20px; */
-  font-size: 60px;
-  font-weight: 700;
-  font-family: "Times New Roman", Times, serif;
+  font-size: 60px !important;
+  font-weight: 700 !important;
+  font-family: "Times New Roman", Times, serif !important;
 }
 .search {
   width: 100% !important;
